--- a/web框架/dynamic/login.html
+++ b/web框架/dynamic/login.html
@@ -40,6 +40,35 @@
                 location.href=url
             })
 
+            // ajax请求center_data数据
+            $.get("/center_data.html",function(center_data){
+                // 获取到json字符串，json对象
+
+                // 定位table元素
+                var $mytable = $("#table");
+
+                for( var i = 0; i < center_data.length;i++){
+                    var oCenterData = center_data[i];
+                    console.log(i)
+                    console.log(oCenterData)
+                    // 封装后的每一个tr标签
+                    var oTr = '<tr style="width: 100%;">' +
+                '<td>'+ oCenterData.code +'</td>'+
+                '<td>'+ oCenterData.short +'</td>'+
+                '<td>'+ oCenterData.chg +'</td>'+
+                '<td>'+ oCenterData.turnover +'</td>'+ 
+                '<td>'+ oCenterData.price +'</td>'+ 
+                '<td>'+ oCenterData.highs +'</td>'+   
+                '<td>'+ oCenterData.time +'</td>'+ 
+                '<td>'+ oCenterData.message +'</td>'+
+                '<td><input type="button" value="删除" id="toAdd" name="toAdd" systemidvalue="000007"></td>'+
+                '</tr>'
+                $mytable.append(oTr)
+                }
+                
+                
+            },"json")
+
         })
     </script>
 </head>
@@ -53,13 +82,18 @@
     <div id="title">
         <span>选股系统</span>&nbsp;&nbsp;       <span id="stockInfo">股票信息</span>&nbsp;&nbsp;       <span id="loginInfo">个人中心</span>
     </div>
-    <div id="table">
-        <table>
+    <div>
+        <table id="table">
             <tr>
-                <th>序号</th>   <th>股票代码</th>   <th>股票简称</th>   <th>涨跌幅</th> <th>换手率</th> <th>最新价(元)</th>   <th>前期高点</th><th>前期高点日期</th><th>添加自选</th>
-            </tr>
-            <tr>
-                {%content%}
+                <th>股票代码</th>
+                <th>股票简称</th>
+                <th>涨跌幅</th>
+                <th>换手率</th>
+                <th>最新价(元)</th>
+                <th>前期高点</th> 
+                <th>前期高点日期</th>
+                <th>备注信息</th>
+                <th>删除自选</th>
             </tr>
         </table>
     </div>
